# DeepFryBot

./: .env.example  .gitignore  .travis.yml  Aptfile  Pipfile  README.md  app.json  bot.py  pyproject.toml
.github/: dependabot.yml
