[tool.poetry]
name = "deepfrybot"
version = "2.2.0"
description = ""
authors = ["Ishan Manchanda <ishanmanchanda70@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.6"
"discord.py" = "^1.7.3"
imageio-ffmpeg = "^0.4.5"
imutils = "^0.5.4"
numba = "^0.53.1"
numpy = "^1.24.2"
opencv-python = "^4.5.3"
Pillow = "^9.0.0"
pyimgur = "^0.6.0"
python-dotenv = "^0.19.0"
pytz = "^2021.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
